--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -4,6 +4,9 @@
   display: block;
   height: 100%;
   width: 100%;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  margin: -8px;
   @include md {
     display: grid;
     grid-template-columns: 5fr 4fr;
@@ -16,6 +19,7 @@
     padding: 4em 3em;
     background: var(--light);
     height: 100%;
+    margin: -8px;
     @include sm {
       padding: 0;
     }
