--- a/src/components/Select/select.module.scss
+++ b/src/components/Select/select.module.scss
@@ -1,20 +1,30 @@
 @import "../../styles/variables.css";
 @import "../../styles/breakpoint";
 .Select {
+  outline: none;
+  font-family: "Raleway", sans-serif;
+  @include md {
+    display: grid;
+    align-items: center;
+    grid-template-columns: auto 1fr;
+  }
   label {
-    font-size: 0.75em;
+    font-size: 0.8em;
     outline: none;
     display: block;
+    @include md {
+      width: 9em;
+    }
   }
   select {
-    height: 2em;
+    height: 2.625em;
     padding: 0.25em 0.4em;
     border-radius: 3px;
     border: 1px solid var(--light-grey);
     font-family: inherit;
-    font-size: 1em;
     margin-top: 0.5em;
     width: 100%;
+    
     &:active,
     &:focus {
       border-color: var(--grey);
@@ -23,6 +33,11 @@
   }
   span {
     color: var(--danger);
+    font-size: 0.85em;
+  }
+  ::placeholder,
+  ::-webkit-input-placeholder {
+    color: #b9bcc9;
     font-size: 0.85em;
   }
 }
