--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -15,6 +15,7 @@
   --light-grey: #dfe2e6;
   --grey: #2e4b65;
   --danger: #b73a5c;
+  --light: #ffffff;
 }
 
 [data-theme="dark"] {
@@ -36,9 +37,4 @@
   --light-pink: #f6eaf3;
   --light-blue: #ecfaff;
 }
-::-webkit-scrollbar {
-  display: none;
-}
-#getStarted {
-  margin: 0 1em 2em;
-}
+
