--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -28,6 +28,7 @@
     background-color: var(--primary-color);
     display: flex;
     text-align: center;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
