--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -22,33 +22,33 @@
     }
   }
   input {
-    height: 2em;
-    padding: 0.25em 0.4em;
-    border-radius: 3px;
+    height: 2.5em;
+    padding: 0.25em 0.6em;
+    border-radius: 5px;
     border: 1px solid var(--light-grey);
-    font-size: 1em;
-
+    font-size: 0.85em;
+    box-sizing: border-box;
     width: 100%;
     &:active,
     &:focus {
-      border-color: var(--grey);
+      border-color: var(--primary-color);
       outline: none;
     }
-    &.isError {
-      border-color:   var(--danger);
+
+    
+  }
+  &Field {
+    [class="error"] {
+      border-color: var(--danger);
     }
-    @include md {
-      width: 21.875em;
-    }
-  
   }
   span {
-    color:  var(--danger);
+    color: var(--danger);
     font-size: 0.65em;
   }
 }
 ::placeholder,
 ::-webkit-input-placeholder {
   color: #b9bcc9;
-  font-size: 0.75em;
+  font-size: 0.9em;
 }
