--- a/src/styles/generic.scss
+++ b/src/styles/generic.scss
@@ -46,6 +46,7 @@ body {
   font-weight: inherit;
   font-family: "Raleway", sans-serif;
   color: inherit;
+  box-sizing: border-box;
 }
 
 button {
