--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #63ceb2;
+  --primary-color: #671469;;
   --base-color: #000000;
   --text-color: #2e4b65;
   --light-green: #f1f9f8;
